syntax = "proto3";

package userProto;

service UserService {
  rpc getUser (UserRequest) returns (UserResponse) {}
  rpc getUsers (stream UsersRequest) returns (stream UserResponse) {}
}

message UserRequest {
  int32 id = 1;
}
message UsersRequest {
  repeated int32 ids = 1;
}

message UserResponse {
  string name = 1;
  int32 age = 2;
}
